--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-right: 100px;
 }
 .logo-outer > img{
     height: 50px;
@@ -37,7 +38,7 @@
     flex: 1;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
 /*nav*/
@@ -48,7 +49,7 @@
 .nav > li > span > a{
     color: white;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 13px;
     text-transform: uppercase;
 }
 .nav > li{
