--- a/main.css
+++ b/main.css
@@ -98,13 +98,40 @@
     height: 40px;
     background-color: white;
     border-radius: 5px;
+    display: flex;
 }
 .search-type{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 13px;
     width: 50px;
     height: 100%;
     background-color: #DADADA;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+}
+.search-wrapper > input[type=search]{
+    flex: 1;
+    background: none;
+    border: none;
+    padding: 0 15px;
+    /*text-align: right;*/
+}
+.search-wrapper > input[type=search]:focus{
+    outline: none;
+}
+.search-icon{
+    width: 50px;
+    height: 100%;
+    background-color: #FE500A;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 /*search style*/
 
