--- a/main.css
+++ b/main.css
@@ -5,6 +5,30 @@
     padding: 0;
     font-family: 'Ubuntu', sans-serif;
 }
+
+body::-webkit-scrollbar{
+    width:10px;
+}
+body::-webkit-scrollbar-track{
+    background-color: #232F3E;
+}
+body::-webkit-scrollbar-thumb{
+    background-color: #FE500A;
+    border-radius: 5px;
+}
+
+/*social style*/
+.social-outer{
+    width: 50px;
+    height: 200px;
+    background-color: red;
+    position: fixed;
+    right: 0;
+    bottom: 150px;
+}
+/*social style*/
+
+
 .main-slider-outer{
     width: 100%;
     height: 100vh;
@@ -19,7 +43,8 @@
     width: 100%;
     height: 70px;
     background-color: #0F172B;
-
+    position: fixed;
+    top: 0;
     display: flex;
 }
 .logo-outer{
