--- a/main.css
+++ b/main.css
@@ -1,24 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Ubuntu', sans-serif;
 }
 
-body::-webkit-scrollbar{
-    width:10px;
+body::-webkit-scrollbar {
+    width: 10px;
 }
-body::-webkit-scrollbar-track{
+
+body::-webkit-scrollbar-track {
     background-color: #232F3E;
 }
-body::-webkit-scrollbar-thumb{
+
+body::-webkit-scrollbar-thumb {
     background-color: #FE500A;
     border-radius: 5px;
 }
 
 /*social style*/
-.social-outer{
+.social-outer {
     width: 50px;
     height: 200px;
     background-color: red;
@@ -28,24 +30,29 @@ body::-webkit-scrollbar-thumb{
     display: flex;
     flex-direction: column;
 }
-.social-inner-wrap{
+
+.social-inner-wrap {
     flex: 1;
     border: 1px solid black;
     position: relative;
 }
-.slide-context{
+
+.slide-context {
     background-color: black;
     width: 150px;
     height: 100%;
     position: absolute;
 }
-.social-inner-wrap:hover > .slide-context{
+
+.social-inner-wrap:hover > .slide-context {
     right: 49px;
+
 }
+
 /*social style*/
 
 
-.main-slider-outer{
+.main-slider-outer {
     width: 100%;
     height: 100vh;
     background-image: url("https://wallpapershome.com/images/wallpapers/miami-3840x2160-south-beach-hotel-pool-sunbed-water-palm-sky-sea-1130.jpg");
@@ -53,9 +60,10 @@ body::-webkit-scrollbar-thumb{
     background-position: center;
     background-size: cover;
 }
+
 /*nav styles*/
 
-.nav-outer{
+.nav-outer {
     width: 100%;
     height: 70px;
     background-color: #0F172B;
@@ -63,7 +71,8 @@ body::-webkit-scrollbar-thumb{
     top: 0;
     display: flex;
 }
-.logo-outer{
+
+.logo-outer {
     /*border: 1px solid red;*/
     width: 200px;
     display: flex;
@@ -71,10 +80,12 @@ body::-webkit-scrollbar-thumb{
     justify-content: center;
     margin-right: 100px;
 }
-.logo-outer > img{
+
+.logo-outer > img {
     height: 50px;
 }
-.nav-bar-context{
+
+.nav-bar-context {
     /*border: 1px solid red;*/
     flex: 1;
     display: flex;
@@ -83,40 +94,52 @@ body::-webkit-scrollbar-thumb{
 }
 
 /*nav*/
-.nav{
+.nav {
     list-style: none;
     display: flex;
 }
-.nav > li > span > a{
+
+.nav > li > span > a {
     color: white;
     text-decoration: none;
     font-size: 13px;
     text-transform: uppercase;
 }
-.nav > li{
-    border-right: 1px solid #bdc3c7;
-    padding: 5px 15px;
+
+.nav > li {
     border-bottom: 2px solid transparent;
     transition: 1s ease-in-out;
+    display: flex;
+    align-items: center;
 }
-.nav > li:last-child{
+
+.line {
+    width: 2px;
+    height: 10px;
+    background-color: white;
+    margin: 0 20px;
+}
+
+.nav > li:last-child {
     border-right: 0;
     padding-right: 0;
 }
 
-.nav > li:hover{
+.nav > li:hover {
     cursor: pointer;
     /*border-bottom: 2px solid white;*/
     border-color: white;
 }
-.nav > li:hover > span > a{
+
+.nav > li:hover > span > a {
     color: #FE500A;
 }
+
 /*.nav > li:nth-child(3){
     border-bottom: 1px solid white;
 }*/
 
-.book-button{
+.book-button {
     padding: 8px 15px;
     background: none;
     margin: 0 20px;
@@ -125,7 +148,8 @@ body::-webkit-scrollbar-thumb{
     border-radius: 5px;
     cursor: pointer;
 }
-.book-button:hover{
+
+.book-button:hover {
     background-color: #FE500A;
     color: white;
 }
@@ -133,7 +157,7 @@ body::-webkit-scrollbar-thumb{
 /*nav*/
 
 /*search style*/
-.search-wrapper{
+.search-wrapper {
     width: 400px;
     margin-right: 10px;
     height: 40px;
@@ -141,7 +165,8 @@ body::-webkit-scrollbar-thumb{
     border-radius: 5px;
     display: flex;
 }
-.search-type{
+
+.search-type {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -152,17 +177,20 @@ body::-webkit-scrollbar-thumb{
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
-.search-wrapper > input[type=search]{
+
+.search-wrapper > input[type=search] {
     flex: 1;
     background: none;
     border: none;
     padding: 0 15px;
     /*text-align: right;*/
 }
-.search-wrapper > input[type=search]:focus{
+
+.search-wrapper > input[type=search]:focus {
     outline: none;
 }
-.search-icon{
+
+.search-icon {
     width: 50px;
     height: 100%;
     background-color: #FE500A;
@@ -174,6 +202,7 @@ body::-webkit-scrollbar-thumb{
     justify-content: center;
     cursor: pointer;
 }
+
 /*search style*/
 
 /*nav styles*/
