--- a/main.css
+++ b/main.css
@@ -33,20 +33,42 @@ body::-webkit-scrollbar-thumb {
 
 .social-inner-wrap {
     flex: 1;
-    border: 1px solid black;
+   /* border: 1px solid black;*/
     position: relative;
 }
 
 .slide-context {
-    background-color: black;
+    background-color: white;
     width: 150px;
     height: 100%;
     position: absolute;
+    display: flex;
+    align-items: center;
+
+    color: #FE500A;
+    font-size: 15px;
+    padding: 0 10px;
 }
 
 .social-inner-wrap:hover > .slide-context {
     right: 49px;
+}
+.social-logo{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    position: absolute;
+    z-index: 1;
+    cursor: pointer;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-logo:hover{
+ background-color: #FF500A;
+    color: white;
 }
 
 /*social style*/
