--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alkalami&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -29,6 +30,7 @@ body::-webkit-scrollbar-thumb {
     bottom: 150px;
     display: flex;
     flex-direction: column;
+    z-index: 10;
 }
 
 .social-inner-wrap {
@@ -81,6 +83,9 @@ body::-webkit-scrollbar-thumb {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /*nav styles*/
@@ -92,6 +97,7 @@ body::-webkit-scrollbar-thumb {
     position: fixed;
     top: 0;
     display: flex;
+    z-index: 100;
 }
 
 .logo-outer {
@@ -226,5 +232,26 @@ body::-webkit-scrollbar-thumb {
 }
 
 /*search style*/
+
+/*slider-middle-text style*/
+.middle-text-outer{
+    width: 100%;
+    height: 150px;
+    border: 1px solid red;
+    position: relative;
+}
+.book-today-text{
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    color: white;
+    font-size: 55px;
+}
+.weekend-offer-text{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-family: 'Alkalami', serif;
+}
+/*slider-middle-text style*/
 
 /*nav styles*/
