--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alkalami&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -305,3 +306,47 @@ body::-webkit-scrollbar-thumb {
 /*booking-widget-style*/
 
 /*nav styles*/
+
+/*about styles*/
+.about-wrapper{
+    width: 100%;
+    height: 300px;
+   /* border: 1px solid red;*/
+    display: flex;
+}
+.about-inner:first-child{
+    flex-direction: column;
+    position: relative;
+    justify-content: center;
+}
+.about-inner{
+   /* border: 1px solid red;*/
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+.about-inner> p{
+    font-size: 16px;
+    color: darkgray;
+    font-family: 'Roboto', sans-serif;
+    padding: 0 20px;
+    line-height: 30px;
+    text-align: justify;
+}
+.welcome-text{
+    color: #FE500A;
+    font-size: 80px;
+    text-align: center;
+    /*border: 1px solid red;*/
+    width: 100%;
+    font-family: 'Dancing Script', cursive;
+}
+.enjoy-text{
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    width: 100%;
+    margin-top: -40px;
+}
+/*about styles*/
