--- a/main.css
+++ b/main.css
@@ -434,3 +434,25 @@ body::-webkit-scrollbar-thumb {
     padding: 0 20px;
 }
 /*Services style*/
+
+/*blog-style*/
+.blog-outer{
+    width: 100%;
+    height: 500px;
+   /* border: 1px solid red;*/
+    margin: 50px  0;
+}
+.blog-inner{
+    width: 80%;
+    height: 100%;
+   /* border: 1px solid red;*/
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.blog-items-wrapper{
+    width: 30%;
+    height: 100%;
+    border: 1px solid red;
+}
+/*blog-style*/
